--- a/ui/dialogs/contrast.ui
+++ b/ui/dialogs/contrast.ui
@@ -59,6 +59,8 @@
                       <object class="GtkTextView" id="example_text_view">
                         <property name="visible">True</property>
                         <property name="can_focus">True</property>
+                        <property name="pixels_above_lines">12</property>
+                        <property name="pixels_below_lines">12</property>
                         <property name="editable">False</property>
                         <property name="wrap_mode">word-char</property>
                         <property name="justification">center</property>
