--- a/ui/dialogs/serverAdd.ui
+++ b/ui/dialogs/serverAdd.ui
@@ -10,6 +10,7 @@
     <property name="border_width">6</property>
     <property name="title" translatable="yes">Add Server</property>
     <property name="resizable">False</property>
+    <property name="window_position">center-on-parent</property>
     <property name="type_hint">normal</property>
     <child internal-child="vbox">
       <object class="GtkVBox" id="dialog-vbox3">
