--- a/ui/dialogs/preferences.ui
+++ b/ui/dialogs/preferences.ui
@@ -234,6 +234,8 @@
                     <property name="right_attach">2</property>
                     <property name="top_attach">5</property>
                     <property name="bottom_attach">6</property>
+                    <property name="x_options">GTK_FILL</property>
+                    <property name="y_options">GTK_FILL</property>
                   </packing>
                 </child>
               </object>
